--- a/pixel-art/style.css
+++ b/pixel-art/style.css
@@ -6,21 +6,6 @@
     font-family: 'Poppins';
 }
 
-.dark-theme {
-    color: #ddd;
-    background: #222;
-}
-
-#theme {
-    position: absolute;
-    top: 2rem; right: 3rem;
-    border: 2px solid;
-    color: inherit;
-    background: none;
-    padding: .25rem .5rem;
-    border-radius: 2rem;
-}
-
 body {
     display: flex;
     flex-flow: column nowrap;
@@ -29,6 +14,34 @@ body {
     height: 100vh;
     text-align: center;
     color: #222;
+    background: #fafafa;
+}
+
+.dark-theme {
+    color: #ddd;
+    background: #222;
+}
+
+button {
+    padding: .25rem .5rem;
+    border: 2px solid;
+    color: inherit;
+    background: none;
+    border-radius: 2rem;
+}
+
+#theme {
+    position: absolute;
+    top: 2rem; right: 3rem;
+}
+
+#menu {
+    position: absolute;
+    top: 2rem; right: 3rem;
+}
+
+.dropdown {
+    display: none;
 }
 
 #canvas {
@@ -54,13 +67,89 @@ body {
 }
 
 #submit {
-    display: block;
-    border: 2px solid;
     margin-top: 3rem;
-    color: inherit;
-    background: none;
     padding: .75rem 1.5rem;
     font-size: 1rem;
     font-weight: 700;
-    border-radius: 2rem;
+    transition: all .35s ease-in-out;
+}
+
+#submit:hover {
+    transform: scale(1.2);
+}
+
+.mockup {
+    position: absolute;
+    bottom: 2rem; right: 3rem;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: .5rem;
+}
+
+.popup div {
+    display: flex;
+    gap: 2rem;
+    align-items: flex-start;
+    text-align: left;
+}
+
+
+
+/* TRANSACTION */
+
+.bg {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: #222;
+    opacity: 0.5;
+    display: none;
+}
+
+.dark-theme .bg {
+    opacity: 0.8;
+}
+
+.popup {
+    position: absolute;
+    width: 30rem;
+    padding: 2rem;
+    background: inherit;
+    border: 2px solid;
+    border-radius: 1rem;
+    display: none;
+}
+
+.popup p {
+    margin-bottom: 2rem;
+}
+
+#repaint-price {
+    display: block;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: limegreen;
+}
+
+#setprice input {
+    margin: 0 auto 2rem;
+    width: 7rem;
+    height: 2.5rem;
+    border: 2px solid;
+    border-radius: 1.5rem;
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: 700;
+}
+
+#setprice span {
+    margin-left: 1rem;
+    font-size: 1.1rem;
+    font-weight: 700;
+}
+
+#confirm-s {
+    margin: auto;
+    display: block;
 }
