--- a/nft-w10/style.css
+++ b/nft-w10/style.css
@@ -3,8 +3,12 @@
 * {
     margin: 0; padding: 0;
     font-family: 'Poppins';
-    color: midnightblue;
+    color: darkgreen;
     user-select: none;
+}
+
+body {
+    background: antiquewhite;
 }
 
 body > div {
@@ -46,7 +50,7 @@ button {
     content: "";
     display: inline-block;
     width: .8rem; height: .8rem;
-    background: salmon;
+    background: palevioletred;
     border-radius: 50%;
 }
 
